css/autocomplete.css
.ngTagsInput .autocomplete {
    margin-top: 5px;
    position: absolute;
    padding: 8px 0;
    background-color: #fff;
    border: 1px solid rgba(0, 0, 0, 0.2);
    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
    width: 100%;
    z-index: 999;
    max-height: 400px;
    overflow: scroll;
}
.ngTagsInput .autocomplete .suggestion-list {
    margin: 0;
    padding: 0;
    list-style-type: none;
    position: relative;
    transition: all linear 0.1s;
}
.ngTagsInput .autocomplete .suggestion-item {
    padding: 3px 16px;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 16px;
    line-height: 20px;
    cursor: pointer;
    text-align: left;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    color: #000;
}
.ngTagsInput .autocomplete .suggestion-item.selected {
    color: #fff;
    background-color: #0097cf;
}
.ngTagsInput .autocomplete .suggestion-item em {
    font-weight: bold;
    font-style: normal;
}
.ngTagsInput .autocomplete .suggestion-item ul {
    padding: 0;
}
.ngTagsInput .autocomplete .suggestion-item:last-child {
    border:none;
}

.ngTagsInput .autocomplete .suggestion-item {
    white-space: normal !important;
    border-bottom: 2px solid #ccc;
    padding: 10px 16px;
}
.ngTagsInput .autocomplete .suggestion-item .tag-label {
    font-weight: bold;
    color: #999;
    margin-right: 0;
    padding-right: 9px;
}
.ngTagsInput .autocomplete .suggestion-item .tag-family:after {
    content: ' )';
}
.ngTagsInput .autocomplete .suggestion-item .tag-family:before{
    content: '( ';
}
.ngTagsInput .autocomplete .suggestion-item .tag-family{
    color: #aaa;
    font-size: 0.8em;
    padding-right: 2px;
    margin-right: 2px;
}
.ngTagsInput .autocomplete .suggestion-item .tag-description {
    display: inline-block;
}
.ngTagsInput .autocomplete .suggestion-item .tag-attribute:last-item {
    border: none;
}
.ngTagsInput .autocomplete .suggestion-item li{
    display: inline;
    padding-right: 16px;
    margin-right: 16px;
    font-size: 14px;
}
.ngTagsInput .autocomplete .suggestion-item li.attributes li {
    border-right: 2px solid #ccc;
}
.ngTagsInput .autocomplete .suggestion-item .attributes {
    display: block;
    border: none;
}
.ngTagsInput .autocomplete .suggestion-item .attributes ul li:last-child {
    border: none;
}
.ngTagsInput .autocomplete .suggestion-item ul li.tag-examples {
    border: none;
}
.ngTagsInput .autocomplete .suggestion-item .tag-attribute-key:first-letter {
    text-transform: uppercase;
}
.ngTagsInput .autocomplete .suggestion-item .tag-attribute-key:after {
    content: ' :';
}
.ngTagsInput .autocomplete .suggestion-item .tag-attribute-key {
    font-style: italic;
    color: #ccc;
}
.ngTagsInput .autocomplete .suggestion-item {
    color: #aaa;
}
.highlighted {
    display: inline-block;
    background-color: #d0ead7;
    border-radius: 4px;
}

